src/test/deca/codegen/valid/tests/importBasic2.deca
// Description:
//   test boucle infini
//
// Resultats:


void A {
	int x = 10;
}