src/test/deca/codegen/invalid/tests/importBoucle2.deca
// Description:
//   test boucle infini
//
// Resultats:

import "importBoucle.deca"

void A {
	int x = 10;
}